_popup.scss 수정 : tree_wrap min-width:250으로 fix

--- a/src/resources/css/_popup.scss
+++ b/src/resources/css/_popup.scss
@@ -318,7 +318,7 @@
 
 .tree_wrap {
   box-sizing: border-box;
-  width: 200px;
+  min-width: 250px;
   max-height: 540px;
   padding-right: 20px;
   overflow: auto;
